--- a/.github/workflows/playwright-ci.yml
+++ b/.github/workflows/playwright-ci.yml
@@ -8,46 +8,36 @@ on:
 
 jobs:
   build_and_test:
-    runs-on: ubuntu-latest  # The CI job will run on the latest Ubuntu version
+    runs-on: ubuntu-latest
 
     steps:
       # Step 1: Checkout the repository
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Step 2: Set up Docker Buildx
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      # Step 3: Log in to Docker Hub
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      # Step 4: Set up Node.js
+      # Step 2: Set up Node.js
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20'  # Specify Node.js version
+          node-version: '20'
 
-      # Step 5: Install lsof and check if installed successfully
+      # Step 3: Install lsof and additional diagnostics
       - name: Install and check lsof
         run: |
           sudo apt-get update
-          sudo apt-get install -y lsof
-          # Diagnostic check to see if lsof is installed and can be executed
-          if ! command -v lsof &> /dev/null
+          sudo apt-get install -y lsof || echo "lsof installation failed!"
+          lsof || echo "lsof command failed!"
+          # Check if lsof is installed
+          if command -v lsof &> /dev/null
           then
+              echo "lsof is successfully installed and found"
+          else
               echo "lsof could not be found"
               exit 1
-          else
-              echo "lsof is successfully installed"
           fi
 
-      # Step 6: Install required libraries for Playwright browsers
-      - name: Install system dependencies (Chromium, Firefox, WebKit)
+      # Step 4: Install dependencies for browsers (Chromium, Firefox, WebKit)
+      - name: Install system dependencies for Playwright browsers
         run: |
           sudo apt-get install -y \
             libnss3 \
@@ -88,24 +78,12 @@ jobs:
             libgstreamer-plugins-bad1.0-0 \
             libx264-155  # Additional media codecs
 
-      # Step 7: Install Playwright dependencies and browsers
-      - name: Install dependencies
-        run: npm ci  # Clean install from package-lock.json
-
-      # Step 8: Install Playwright Browsers
+      # Step 5: Install Playwright browsers
       - name: Install Playwright browsers
         run: npx playwright install
 
-      # Step 9: Run Playwright Tests
+      # Step 6: Run Playwright Tests
       - name: Run Playwright Tests
         run: npx playwright test
         env:
-          CI: true  # Signals that tests are running in CI
-
-      # Upload Playwright report
-      - name: Upload Playwright report
-        if: always()
-        uses: actions/upload-artifact@v3
-        with:
-          name: playwright-report
-          path: playwright-report/
+          CI: true
